--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,18 +3,10 @@ body {
 	margin: 0;
 	padding: 0;
 
-	font-family:
-		-apple-system,
-		BlinkMacSystemFont,
-		"Segoe UI",
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		"Fira Sans",
-		"Droid Sans",
-		"Helvetica Neue",
-		sans-serif;
+	color: var(--black);
+	background: #F5F6F8;
+
+	font-family: "Noto Sans KR", sans-serif;
 }
 
 a {
@@ -27,13 +19,14 @@ a {
 	box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-	html {
-		color-scheme: dark;
-	}
-
-	body {
-		color: white;
-		background: black;
-	}
+:root {
+	--black: #3B434E;
+	--gray-light: #EBEBEB;
+	--white: white;
+	--primary: #7653FC;
+	--primary-hover: #6344DF;
+	--red: #FC836D;
+	--green: #1DC37E;
+	--green-light: #C8F8E4;
+	--font-family: "Noto Sans KR", sans-serif;
 }
