--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -4,6 +4,7 @@
   grid-template-rows: auto 1fr auto;
 
   min-height: 100vh;
+  gap: 0 30px;
   grid-template-areas:
     ". header header ."
     ". sidebar body ."
