--- a/page-components/CourseInfo/CourseInfo.module.css
+++ b/page-components/CourseInfo/CourseInfo.module.css
@@ -15,3 +15,23 @@
   justify-items: left;
   gap: 20px;
 }
+
+.seo h1 {
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 35px;
+}
+
+.seo h2 {
+  margin: 50px 0 25px;
+
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 30px;
+}
+
+.seo h3 {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 27px;
+}
