--- a/components/Product/Product.module.css
+++ b/components/Product/Product.module.css
@@ -1,6 +1,7 @@
 .product {
   display: grid;
   grid-template-columns: [start] 70px [logoend] 30px [titlestart] calc(50% - 100px) [middle] 1fr [pricestart] auto [priceend] 40px [creditstart] auto [creditend] 40px [ratestart] auto [end];
+
   margin-bottom: 30px;
   padding: 30px;
 }
@@ -10,23 +11,29 @@
   grid-row: 1 / span 2;
 }
 
-.title, .tags {
+.title,
+.tags {
   grid-column: titlestart / middle;
 }
 
-.price, .priceTitle {
+.price,
+.priceTitle {
   grid-column: pricestart / priceend;
 }
 
-.credit, .creditTitle {
+.credit,
+.creditTitle {
   grid-column: creditstart / creditend;
 }
 
-.rating, .rateTitle {
+.rating,
+.rateTitle {
   grid-column: ratestart / end;
 }
 
-.hr, .description, .actions {
+.hr,
+.description,
+.actions {
   grid-column: start / end;
 }
 
@@ -43,20 +50,23 @@
 }
 
 .title {
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 27px;
   align-self: flex-end;
+
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 27px;
 }
 
 .category {
   margin-top: 7px;
 }
 
-.price, .credit {
+.price,
+.credit {
+  align-self: flex-end;
+
   font-size: 20px;
   line-height: 27px;
-  align-self: flex-end;
 }
 
 .month {
@@ -73,16 +83,17 @@
 }
 
 .description {
+  margin-bottom: 15px;
+
   font-size: 16px;
   line-height: 24px;
-  margin-bottom: 15px;
 }
 
 .priceTitle,
 .creditTitle,
 .rateTitle {
-  font-weight: 300;
   font-size: 14px;
+  font-weight: 300;
   line-height: 19px;
 }
 
@@ -96,17 +107,42 @@
 }
 
 .advTitle {
-  font-weight: bold;
   margin-bottom: 5px;
+
+  font-weight: bold;
 }
 
 .advantages {
-  border-left: 2px solid var(--green);
-  padding-left: 15px;
   margin-bottom: 20px;
+  padding-left: 15px;
+
+  border-left: 2px solid var(--green);
 }
 
 .disadvantages {
-  border-left: 2px solid var(--red);
   padding-left: 15px;
+
+  border-left: 2px solid var(--red);
+}
+
+.characteristics {
+  display: grid;
+  align-items: baseline;
+
+  padding-right: 60px;
+
+  font-size: 16px;
+  line-height: 32px;
+  grid-template-columns: auto 1fr auto;
+  gap: 10px;
+}
+
+.characteristicsName {
+  font-weight: bold;
+}
+
+.characteristicsDots {
+  margin-bottom: 5px;
+
+  border-bottom: 1px dashed var(--gray-light);
 }
