--- a/components/Textarea/Textarea.module.css
+++ b/components/Textarea/Textarea.module.css
@@ -17,3 +17,19 @@
 .textarea::placeholder {
   color: var(--gray);
 }
+
+.error {
+  border: 1px solid var(--red);
+}
+
+.textareaWrapper {
+  position: relative;
+}
+
+.errorMessage {
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+
+  color: var(--red);
+}
