--- a/components/ReviewForm/ReviewForm.module.css
+++ b/components/ReviewForm/ReviewForm.module.css
@@ -27,14 +27,21 @@
   gap: 20px;
 }
 
-.success {
+.panel {
   position: relative;
 
   margin-top: 20px;
   padding: 20px;
 
   border-radius: 5px;
+}
+
+.success {
   background: var(--green-light);
+}
+
+.error {
+  background: var(--red-light);
 }
 
 .successTitle {
@@ -47,4 +54,8 @@
   right: 20px;
 
   cursor: pointer;
+}
+
+.error .close path {
+  stroke: var(--red);
 }
