--- a/layout/SecondLevelMenu/SecondLevelMenu.module.css
+++ b/layout/SecondLevelMenu/SecondLevelMenu.module.css
@@ -1,4 +1,3 @@
-
 .secondLevel {
   margin-bottom: 10px;
 
@@ -22,13 +21,5 @@
 }
 
 .secondLevelBlock {
-  display: none;
-}
-
-.secondLevelBlockOpened {
-  display: block;
-}
-
-.secondLevelBlockOpened:last-child {
-  margin-bottom: 20px;
+  overflow: hidden;
 }
