--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,14 +21,14 @@ a {
 :root {
   --black: #3B434E;
   --gray-light: #EBEBEB;
-  --gray-dark: #787D85;
+  --gray-dark: #6C7077;
   --gray: #A4A4A4;
   --white: white;
-  --primary: #7653FC;
+  --primary: #7351F5;
   --primary-hover: #6344DF;
-  --red-light: #fea291;
+  --red-light: #FEA291;
   --red: #FC836D;
-  --green: #1DC37E;
+  --green: #007B48;
   --green-light: #C8F8E4;
   --font-family: "Noto Sans KR", sans-serif;
 }
