--- a/components/Sort/Sort.module.css
+++ b/components/Sort/Sort.module.css
@@ -20,7 +20,7 @@
   gap: 40px;
 }
 
-.sort span {
+.sort button {
   display: grid;
   gap: 8px;
   grid-template-columns: 20px 1fr;
@@ -28,8 +28,14 @@
   align-items: center;
 
   cursor: pointer;
+
+  border: none;
+  background: none;
+
+  font-size: 16px;
+  line-height: 22px;
 }
 
-.sort span:not(.active) {
+.sort button:not(.active) {
   grid-template-columns: 1fr;
 }
