--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,15 @@ a {
   padding: 0;
 }
 
+.visualyHidden {
+  position: absolute;
+
+  overflow: hidden;
+
+  width: 0;
+  height: 0;
+}
+
 :root {
   --black: #3B434E;
   --gray-light: #EBEBEB;
