Refactor: list in menu

--- a/layout/FirstLevelMenu/FirstLevelMenu.module.css
+++ b/layout/FirstLevelMenu/FirstLevelMenu.module.css
@@ -11,6 +11,10 @@
   gap: 20px;
 }
 
+.firstLevelList {
+  list-style: none;
+}
+
 .firstLevelActive,
 .firstLevel:hover {
   color: var(--primary);
